<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin"
    android:background="@drawable/fondo_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/holaLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HOLA"
            android:textSize="45sp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/emailLogin"
            android:textColor="@color/verde"
            android:layout_marginTop="100dp">
        </TextView>
        <TextView
            android:id="@+id/bienvenidoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/holaLogin"
            android:text="@string/BIENVENIDO"
            android:textSize="45sp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintStart_toStartOf="@id/holaLogin"
            android:textColor="@color/verde">
        </TextView>
        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/EMAIL"
            android:inputType="text"
            android:textSize="22sp"
            android:textColorHint="@color/blancoClaro"
            android:textColor="@color/white"
            android:backgroundTint="@color/verde"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bienvenidoLogin"
            android:layout_marginTop="80sp">
        </EditText>

        <EditText
            android:id="@+id/contrasenaLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/CONTRASENA"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:textColorHint="@color/blancoClaro"
            android:textColor="@color/white"
            android:backgroundTint="@color/verde"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLogin"
            android:layout_marginTop="30dp">
        </EditText>
        <Button
            android:id="@+id/botonLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:text="@string/LOGIN"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/contrasenaLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="70dp">
        </Button>
        <TextView
            android:id="@+id/noTienesCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NOTIENESCUENTA"
            android:textSize="14sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/botonLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp">
        </TextView>
        <TextView
            android:id="@+id/crearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CREARCUENTA"
            android:textSize="14sp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/verde"
            app:layout_constraintTop_toBottomOf="@id/noTienesCuenta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>