<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCrearCuenta"
    android:background="@drawable/fondo_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/crearCuentaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CREARCUENTA"
            android:textSize="30sp"
            android:textColor="@color/verde"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="130dp">
        </TextView>
        <EditText
            android:id="@+id/usuarioRegistro"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/USUARIO"
            android:inputType="text"
            android:textSize="22sp"
            android:textColorHint="@color/blancoClaro"
            android:textColor="@color/white"
            android:backgroundTint="@color/verde"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@id/crearCuentaText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50sp">
        </EditText>
        <EditText
            android:id="@+id/emailRegistro"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/EMAIlREGISTRO"
            android:inputType="textEmailAddress"
            android:textSize="22sp"
            android:textColorHint="@color/blancoClaro"
            android:textColor="@color/white"
            android:backgroundTint="@color/verde"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@id/usuarioRegistro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp">
        </EditText>
        <EditText
            android:id="@+id/contrasenaRegistro"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/CONTRASENA"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:textColorHint="@color/blancoClaro"
            android:textColor="@color/white"
            android:backgroundTint="@color/verde"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@id/emailRegistro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp">
        </EditText>
        <EditText
            android:id="@+id/confirContrasenaRegistro"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/CONFIRCONTRASENA"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:textColorHint="@color/blancoClaro"
            android:textColor="@color/white"
            android:backgroundTint="@color/verde"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@id/contrasenaRegistro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp">
        </EditText>
        <Button
            android:id="@+id/siguienteARegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIGUIENTE"
            android:backgroundTint="@color/verde"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/confirContrasenaRegistro"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/confirContrasenaRegistro">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>