<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityUserPerfil"
    android:padding="20dp"
    android:background="@drawable/gradient4">

    <ImageView
        android:id="@+id/IbRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flecha_atras"
        android:background="@android:color/transparent"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/txt_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Perfil"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:textSize="47sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IbRegresar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/perfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_image_perfil"
        app:layout_constraintTop_toBottomOf="@id/txt_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombres"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/txt_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_altura"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/txt_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txt_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_peso"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/txt_altura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_ActualizarInfo"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/btn_ActualizarInfo"
        android:alpha="0.3"
        android:textSize="20sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txt_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_ActualizarInfo"
        app:layout_constraintBottom_toBottomOf="@id/btn_ActualizarInfo"
        app:layout_constraintStart_toStartOf="@id/btn_ActualizarInfo"
        app:layout_constraintEnd_toEndOf="@id/btn_ActualizarInfo"
        android:textSize="20sp"
        android:fontFamily="@font/lato_bold"
        android:alpha="1"
        android:text="@string/btn_ActualizarInfo"
        android:textColor="@color/white">
    </TextView>

    <Button
        android:id="@+id/btn_historial"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:text="@string/btn_historial_usuarioPerfil"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_regular"
        android:backgroundTint="@color/white"
        android:alpha="0.3"
        app:layout_constraintTop_toBottomOf="@+id/btn_ActualizarInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_historial"
        app:layout_constraintBottom_toBottomOf="@id/btn_historial"
        app:layout_constraintStart_toStartOf="@id/btn_historial"
        app:layout_constraintEnd_toEndOf="@id/btn_historial"
        android:textSize="20sp"
        android:fontFamily="@font/lato_bold"
        android:alpha="1"
        android:text="@string/btn_historial_usuarioPerfil"
        android:textColor="@color/white">
    </TextView>

    <Button
        android:id="@+id/btn_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cerrarsesion_usuarioPerfil"
        android:fontFamily="@font/lato_bold"
        android:textSize="20sp"
        android:backgroundTint="@color/black"
        android:alpha="0.3"
        app:layout_constraintTop_toBottomOf="@+id/btn_historial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_cerrar_sesion"
        app:layout_constraintBottom_toBottomOf="@id/btn_cerrar_sesion"
        app:layout_constraintStart_toStartOf="@id/btn_cerrar_sesion"
        app:layout_constraintEnd_toEndOf="@id/btn_cerrar_sesion"
        android:textSize="20sp"
        android:fontFamily="@font/lato_bold"
        android:alpha="1"
        android:text="@string/btn_cerrarsesion_usuarioPerfil"
        android:textColor="@color/white">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>
