<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    tools:context=".ActivityAgregarFoto">


    <ImageView
        android:id="@+id/IbRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_regresar"
        android:background="@android:color/transparent"
        android:layout_marginTop="55dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_titulo_subirfoto"
        android:text="@string/SUBE_TU_FOTO"
        android:textSize="40sp"
        android:textColor="@color/verde"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="67dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        />

    <ImageView
        android:id="@+id/imageViewPreview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/text_titulo_subirfoto"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonTomarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomar_foto"
        android:textAllCaps="true"
        android:backgroundTint="@color/verde"
        app:layout_constraintTop_toBottomOf="@id/imageViewPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSeleccionarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_foto"
        android:textAllCaps="true"
        android:backgroundTint="@color/verde"
        app:layout_constraintTop_toBottomOf="@id/buttonTomarFoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonTomarFotoCamara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/buttonSeleccionarFoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/verde"
        android:text="Tomar Foto"
        android:textAllCaps="true"/>




</androidx.constraintlayout.widget.ConstraintLayout>